tests/files/ok/GenericArrayCreate.krna


fn f<T>() {
    let create: [T] = [];

}