tests/files/fail/FunctionToManyArgs.krna


fn f(a: fn(string, string, string, string, string, string) -> string) {}